# mapreduce-cpp

./: CMakeLists.txt  README.md  wordcount-test.sh
src/include/: coordinator.h  helper.h  map_reduce_interface.h  wc.h  worker.h
src/worker/: coordinator.cpp  helper.cpp  main.cpp  wc.cpp  worker.cpp
